--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "babel-preset-env": "^1.1.4",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-3": "^6.17.0",
+    "browser-sync": "^2.18.5",
     "gulp": "^3.9.1",
-    "gulp-connect": "^5.0.0",
     "gulp-cssmin": "^0.1.7",
     "gulp-rename": "^1.2.2",
     "gulp-stylus": "^2.6.0",
